testsuite/tests/parser/should_fail/pfail016.alan
hello() : proc
  foo : int['a'];
{
}
